Alteração no CSS
Signed-off-by: DevJoao-sources <xfx.joao@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: "Press Start 2P", "Helvetica", sans-serif;
 }
 
-/* 000webhost remove */
+/* 000webhost powered by remove */
 img[alt="www.000webhost.com"] {
   display: none !important;
 }
